[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/door/Door.gd" type="Script" id=1]
[ext_resource path="res://tiles/tileset1.png" type="Texture" id=2]
[ext_resource path="res://sprites/enemies.png" type="Texture" id=3]
[ext_resource path="res://objects/door/sound_open.wav" type="AudioStream" id=4]
[ext_resource path="res://objects/door/sound_unlock.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 6, 16 )

[sub_resource type="Animation" id=2]

resource_name = "unlock"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("cloud:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("locked_door:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_unlock"
} ]
}

[node name="Door" type="Area2D"]

scale = Vector2( 3, 3 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 32
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Offset", "Region", "Transform" ]
door_name = ""
dest_scene = ""
dest_spawn = ""
state = null

[node name="unlocked_door" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
offset = Vector2( 0, -16 )
region_enabled = true
region_rect = Rect2( 0, 128, 32, 32 )
_sections_unfolded = [ "Offset", "Region", "Visibility" ]

[node name="locked_door" type="Sprite" parent="." index="1"]

visible = false
texture = ExtResource( 2 )
offset = Vector2( 0, -16 )
region_enabled = true
region_rect = Rect2( 32, 128, 32, 32 )
_sections_unfolded = [ "Offset", "Region", "Visibility" ]

[node name="cloud" type="Sprite" parent="." index="2"]

position = Vector2( 0, -13 )
texture = ExtResource( 3 )
vframes = 16
hframes = 16
frame = 24
_sections_unfolded = [ "Animation", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

position = Vector2( 0, -16 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="poof" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/unlock = SubResource( 2 )
blend_times = [  ]

[node name="sound_open" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="sound_unlock" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]

[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]


